# FastAPI-QA-App

./: dockerfile  pyproject.toml  test.db
app/: crud.py  database.py  main.py  models.py  schemas.py
tests/: test_main.py
